--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -104,7 +104,7 @@
 .pagination {
   padding: 10px 10px 10px 2px;
   display: flex;
-  justify-content: end;
+  justify-content: center;
 }
 
 /* Apply the scrollable_table class to your table element */
@@ -267,6 +267,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 10px;
   padding: 20px 10px 0px 10px;
 }
@@ -275,4 +276,34 @@
   display: flex;
   justify-content: flex-start;
   gap: 10px;
+}
+
+
+@media (max-width: 750px) {
+  .header {
+    justify-content: center;
+  }
+
+  .tableContainer {
+    overflow-x: auto; 
+    margin: 0px 10px;
+  }
+
+  .scrollable_table {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .scrollable_table,
+  .scrollable_table th,
+  .scrollable_table td {
+    padding: 15px; /* Reduce padding on smaller screens */
+  }
+
+  .pagination {
+    padding: 10px 25px 10px 25px;
+    display: flex;
+    justify-content: center;
+  }
+
 }
