manage plans implementation

--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -209,6 +209,7 @@
   line-height: 18px;
   letter-spacing: 0em;
   text-align: left;
+  margin-right: 10px;
 }
 .menu {
   list-style: none;
@@ -515,7 +516,7 @@
     }
 
     .td_desc{
-      min-width: 55.5rem;
+      min-width: 300px;
     }
 
 }
