Filter implemented in masterData screens

--- a/apps/web/src/styles/clientList.module.scss
+++ b/apps/web/src/styles/clientList.module.scss
@@ -351,4 +351,12 @@
     gap: 20px;
     padding: 21px 0px 0px 5px;
   }
+
+  .headingRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    cursor: pointer;
+  }
   
