--- a/apps/web/src/styles/newStyles/hsnList.module.scss
+++ b/apps/web/src/styles/newStyles/hsnList.module.scss
@@ -334,3 +334,11 @@
   gap: 20px;
   padding-left: 10px;
 }
+
+.headingRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  cursor: pointer;
+}
