--- a/apps/web/src/styles/userList.module.scss
+++ b/apps/web/src/styles/userList.module.scss
@@ -344,3 +344,11 @@
   padding-left: 10px;
   transform: translateY(18%);
 }
+
+.headingRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  cursor: pointer;
+}
