--- a/apps/web/src/styles/machinery.module.scss
+++ b/apps/web/src/styles/machinery.module.scss
@@ -263,3 +263,12 @@
     padding-left: 10px;
     transform: translateY(18%);
     }
+
+    .headingRow {
+      display: flex;
+      flex-direction: row;
+      justify-content: left;
+      align-items: center;
+      cursor: pointer;
+    }
+    
