--- a/apps/web/src/styles/uom.module.scss
+++ b/apps/web/src/styles/uom.module.scss
@@ -355,3 +355,11 @@
   gap: 20px;
   padding: 21px 0px 0px 5px;
 }
+
+.headingRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  cursor: pointer;
+}
