--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -221,7 +221,7 @@
 .dropDownContent {
   display: flex;
   flex-direction: column;
-  padding: 8px;
+  padding: 0px 0px 0px 0px;
   gap: 1rem;
 }
 
@@ -784,5 +784,10 @@ body, html {
     top: 0;
     overflow-x: auto;  /* hides horizontal overflow */
   }
+}
+
+.dashedLine {
+  border-bottom: 0.1px dashed #000;
+  /* Adjust the color and thickness as needed */
 }
 
