--- a/apps/web/src/styles/newStyles/purchaseRequest.module.scss
+++ b/apps/web/src/styles/newStyles/purchaseRequest.module.scss
@@ -176,6 +176,12 @@
   display: flex;
   gap: 20px;
 }
+.ColpsChilds1 {
+  display: flex;
+  justify-content: space-evenly;
+  width: 500px;
+  gap: 20px;
+}
 .ColpsheadingpanelOne {
   display: flex;
   flex-direction: column;
