No data format added in purchase request list screen

--- a/apps/web/src/styles/newStyles/purchaseRequest.module.scss
+++ b/apps/web/src/styles/newStyles/purchaseRequest.module.scss
@@ -258,3 +258,28 @@
   height: 1px;
   background-color: #d0d5dd;
 }
+
+.emptyDataHandling {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  padding-top: 29px;
+}
+
+.textmin {
+  padding: 10px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.textmax {
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.image {
+  display: flex;
+  justify-content: center;
+}
