Indent approval popup

--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -723,3 +723,10 @@
   border-bottom: 1px solid black;
   padding-bottom: 5px;
 }
+
+.descriptioninputfeild{
+  width : 95%;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+}
