--- a/apps/web/src/styles/newStyles/globalExpenseList.module.scss
+++ b/apps/web/src/styles/newStyles/globalExpenseList.module.scss
@@ -5,13 +5,7 @@
 
 .topHeading {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 10px;
-  padding: 0px 10px 0px 10px;
-  align-self: center;
-  padding-bottom: 10px;
+  justify-content: end;
 }
 
 .sub_header {
