Making Nav bar responsive for mobile

--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -738,8 +738,9 @@ ed .center {
 .dropDownContentForVerticalNav {
   display: flex;
   flex-direction: column;
-  padding: 8px;
+  padding: 10px;
   gap: 1rem;
+  color: blue;
 }
 
 .navigationLinks > div {
