project edit scroll handle

--- a/apps/web/src/styles/newStyles/projectStockManagement.module.scss
+++ b/apps/web/src/styles/newStyles/projectStockManagement.module.scss
@@ -2,6 +2,11 @@
   width: 100%;
   padding-bottom: 10px;
 }
+.stock_Container{
+  // background-color: lightcoral;
+  overflow-y: auto; /* Add this line to make the y-axis scrollable */
+  max-height: 90vh
+}
 
 .topHeading {
   // background-color: aqua;
