--- a/apps/web/src/styles/newStyles/siteExpenseList.module.scss
+++ b/apps/web/src/styles/newStyles/siteExpenseList.module.scss
@@ -77,38 +77,38 @@
 }
 
 .approvedStyles {
-  color: #118153;
+  color: var(--completed-text);
 }
 .rejectedStyles {
-  color: red;
+  color: var(--rejected-text);
 }
 .pendingStyles {
-  color: #c01574;
+  color: var(--pending-text);
 }
 
 .approvedStatus {
-  background-color: #ecfdf3;
-  padding: 6px;
-  border-radius: 50px;
-  color: #027a48;
+  background-color: var(--completed-backgroundColor);
+  padding: var(--status-padding);
+  border-radius: var(--status-borderRadius);
+  color: var(--completed-color);
 }
 .pendingStatus {
-  background-color: #fdf2fa;
-  padding: 6px;
-  border-radius: 50px;
-  color: #c11574;
+  background-color: var(--inprogress-backgroundColor);
+  padding: var(--status-padding);
+  border-radius: var(--status-borderRadius);
+  color: var(--inprogress-color);
 }
 .rejectedStatus {
-  background-color: #fffaeb;
-  padding: 6px;
-  border-radius: 50px;
-  color: #b54708;
+  background-color: var(--rejected-backgroundColor);
+  padding: var(--status-padding);
+  border-radius: var(--status-borderRadius);
+  color: var(--rejected-color);
 }
 .draftStatus {
-  background-color: #eff8ff;
-  padding: 6px;
-  border-radius: 50px;
-  color: #175cd3;
+  background-color:var(--draft-backgroundColor);
+  padding: var(--status-padding);
+  border-radius: var(--status-borderRadius);
+  color: var(--draft-color);
 }
 
 .emptyData {
