--- a/apps/web/src/styles/projectDetails.module.scss
+++ b/apps/web/src/styles/projectDetails.module.scss
@@ -45,7 +45,7 @@
   flex-wrap: wrap;
 }
 .dividerStyleOne {
-  border-bottom: 1px solid rgb(66, 200, 75);
+  border-bottom: var(--divider-projectForm);
   width: 86%;
   margin-bottom: 5px;
 }
