--- a/apps/web/src/styles/projectFormAddNew.module.scss
+++ b/apps/web/src/styles/projectFormAddNew.module.scss
@@ -15,7 +15,7 @@
   border-bottom: 1px solid #ccc;
 }
 .dividerStyleOne {
-  border-bottom: 1px solid rgb(118, 238, 126);
+  border-bottom: var(--divider-projectForm);
   width: 65%;
   margin-bottom: 5px;
 }
